# podman-nuxt

./: README.md
backend/: .env  Cargo.toml  Containerfile
backend/migrations/: 20260403075359_create_users_table.up.sql
backend/src/: main.rs
backend/src/application/: mod.rs
backend/src/domain/: entities.rs  mod.rs  repostirories.rs
backend/src/infrastructure/auth/: mod.rs
backend/src/infrastructure/database/: mod.rs
backend/src/interface/controllers/: mod.rs
frontend/: Containerfile  nuxt.config.ts  package.json
frontend/app/components/: AnimatedBackground.vue
frontend/app/layouts/: auth.vue  defaults.vue  panel.vue
frontend/app/pages/: dashboard.vue  index.vue  register.vue
frontend/assets/css/: auth_main.css  dashboard.css  login.css  main.css  panel.css  register.css  tailwind-engine.css
frontend/assets/js/: login.js  register.js
frontend/composables/: useAuth.js
frontend/plugin/: toastr.client.js
frontend/plugins/: jquery.client.js
quadlets/: auth-backend.container  auth-db.container  auth-frontend.container  auth.network
