[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
uuid = { version = "1.13", features = ["v4", "serde"] }
jsonwebtoken = "9.3"
argon2 = "0.5"
dotenvy = "0.15"
async-trait = "0.1"
chrono = "0.4.44"
